--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -72,7 +72,6 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" id="main">
-          <h1>Over View</h1>
           <!-- charts will go here -->
           <svg id="canvas" width="1000" height="1000">
           </svg>
@@ -88,7 +87,8 @@
 // display a chart based on the given dataset
 function mkchart(
   canv, // svg object given by d3.select
-  data, // dataset each element must have label:<string>,val:<value>
+  items, // list of metrics
+  data, // dataset
   prefix, // unique name for this chart
   orig_cx,orig_cy,radius, // center location and radius
   clrs // colors: background, line, polygon, label
@@ -99,30 +99,37 @@ function mkchart(
   var t_text_appear = 700;
   var t_poly_grow = 700;
 
-  var num = data.length;
-  var max_val = Math.max.apply(null,data.map(function(d){return d.val;}));
-  var polysubid = ["back", "data"];
+  var num = items.length;
+  var max_val =
+    Math.max.apply(null,
+      data.map(function(d){
+        return Math.max.apply(null,d.list);
+      }));
 
-  //d3.selectAll("#debug").text("asdf");
-  //d3.select("#debug").selectAll("p").data(["a","b","c"]).enter().append("p").text(function(d){return prefix + d;});
-
-
-  var lines = canv.selectAll("line."+prefix).data(data).enter().append("line")
+  var lines = canv.selectAll("line."+prefix).data(items).enter().append("line")
       .attr("class",prefix);
-  var polygons = canv.selectAll("polygon."+prefix).data(polysubid)
+
+  var back = canv.selectAll("polygon."+prefix+"back").data(["back"])
       .enter().append("polygon")
-      .attr("id",function(d){ return prefix + d; })
-      .attr("class",prefix);
-  var back = canv.select("#" + prefix + polysubid[0]);
-  var poly = canv.select("#" + prefix + polysubid[1]);
-  var labels = canv.selectAll("text."+prefix).data(data).enter().append("text")
+      .attr("class",prefix+"back");
+  var polysubid = data.map(function(d){return d.name;});
+  var polygons = canv.selectAll("polygon."+prefix+"poly").data(data)
+      .enter().append("polygon")
+      .attr("class",prefix+"poly");
+
+  var labels = canv.selectAll("text."+prefix).data(items).enter().append("text")
       .attr("class",prefix)
-      .text(function(d){return d.label;});
-  var title = canv.selectAll("text."+prefix+"-title").data(["title"]).enter().append("text")
-      .attr("class",prefix+"-title")
+      .text(function(d){return d;});
+  var names = canv.selectAll("text."+prefix+"name").data(data).enter().append("text")
+      .attr("class",prefix+"name")
+      .attr("fill",function(d){return d.clr;})
+      .attr("x",orig_cx+radius+50).attr("y",function(d,i){return 20+i*20;})
+      .text(function(d){return d.name;});
+  var title = canv.selectAll("text."+prefix+"title").data(["title"]).enter().append("text")
+      .attr("class",prefix+"title")
       .attr("x",orig_cx).attr("y",orig_cy)
       .attr("text-anchor","middle")
-      .attr("font-size","30pt")
+      .attr("font-size",""+Math.round(radius/3.5)+"pt")
       .attr("font-weight","bold")
       .attr("fill",clrs.text)
       .attr("opacity",0)
@@ -132,7 +139,7 @@ function mkchart(
   back.attr("points",""+orig_cx+","+orig_cy).attr("opacity","0.3").attr("fill",clrs.back)
     .attr("points",
       function() {
-        return data.map(function(d,i) {
+        return items.map(function(d,i) {
           return [
             radius*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx,
             radius*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy
@@ -160,30 +167,37 @@ function mkchart(
     .transition().delay(t_line_grow).duration(t_text_appear)
     .attr("fill",clrs.text);
   //extend the polygon
-  poly
-    .attr("points",
-      function() {
-        return data.map(function(d,i) {
+  polygons.attr("points",
+      function(d) {
+        return d.list.map(function(d,i) {
           return [
             orig_cx,
             orig_cy
           ].join(",");
         }).join(" ");
       })
-    .attr("opacity","0.4").attr("fill",clrs.poly).transition().delay(t_line_grow).duration(t_poly_grow)
+    .attr("opacity","0.4")
+    .attr("fill",
+      function(d) {
+        return d.clr;
+      }).transition().delay(t_line_grow).duration(t_poly_grow)
     .attr("points",
-      function() {
-        return data.map(function(d,i) {
+      function(d) {
+        return d.list.map(function(d,i) {
           return [
-            d.val*radius/max_val*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx,
-            d.val*radius/max_val*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy
+            d*radius/max_val*Math.cos(Math.PI*2/num*i-Math.PI/2)+orig_cx,
+            d*radius/max_val*Math.sin(Math.PI*2/num*i-Math.PI/2)+orig_cy
           ].join(",");
         }).join(" ");
       });
 
+  // show the names of data series
+  names.transition().delay(t_line_grow).duration(t_text_appear)
+       .attr("opacity",1);
+
   // show the title
   title.transition().delay(t_line_grow).duration(t_text_appear)
-      .attr("opacity",1);
+      .attr("opacity",0.4);
 }
 
 function selectButton(indx){
@@ -222,94 +236,111 @@ canv.attr("width",2000).attr("height",5000);
 function go2energy(){
   selectButton("energy");
   canv.selectAll("*").remove();
-  // chart 1
-  var data = [
-    {label:"name1",val:50},
-    {label:"name2",val:30},
-    {label:"name3",val:20},
-    {label:"name4",val:10},
-    {label:"name5",val:56},
-    {label:"name6",val:26}];
-  mkchart(canv,data,"Energy1",300,230,200,{back:"cyan",line:"green",poly:"lime",text:"green"});
 
-  // chart 2
-  var data2 = [
-    {label:"item1",val:25},
-    {label:"item2",val:55},
-    {label:"item3",val:30}
+  var items = [
+    "item1","item2","item3","item4","item5","item6"
   ];
-  mkchart(canv,data2,"Energy2",700,200,100,{back:"pink",line:"black",poly:"red",text:"black"});
+  var data1 = {
+    name : "Data1",
+    clr : "blue",
+    list :  [50,30,26,30,20,10]
+  };
+  var data2 = {
+    name : "Data2",
+    clr : "steelblue",
+    list :  [45,50,30,43,30,20]
+  };
+  var data = [data1,data2];
+  mkchart(canv,items,data,"Energy",300,250,200,{back:"indigo",line:"gray",text:"aqua"});
+
+
+  items = [
+    "item1","item2","item3"
+  ];
+  data1 = {
+    name : "Data1",
+    clr : "green",
+    list :  [50,20,10]
+  };
+  data2 = {
+    name : "Data2",
+    clr : "violet",
+    list :  [43,30,20]
+  };
+  data3 = {
+    name : "Data3",
+    clr : "darkblue",
+    list :  [5,10,50]
+  };
+  data = [data1,data2,data3];
+  mkchart(canv,items,data,"Energy2",700,250,130,{back:"steelblue",line:"black",text:"mediumblue"});
+
 }
 
 function go2waste(){
   selectButton("waste");
   canv.selectAll("*").remove();
-  // chart 3
-  var data3 = [
-    {label:"item1",val:25},
-    {label:"item2",val:55},
-    {label:"item3",val:30},
-    {label:"item4",val:100},
-    {label:"item5",val:30}
-  ];
-  mkchart(canv,data3,"Waste1",300,230,180,{back:"cyan",line:"grey",poly:"green",text:"blue"});
 
-  // chart 4
-  var data4 = [
-    {label:"item1",val:25},
-    {label:"item2",val:55},
-    {label:"item3",val:30},
-    {label:"item4",val:100},
-    {label:"item5",val:30}
+  var items = [
+    "item1","item2","item3","item4","item5"
   ];
-  mkchart(canv,data4,"Waste2",700,200,100,{back:"brown",line:"orange",poly:"yellow",text:"black"});
+  var data1 = {
+    name : "Data1",
+    clr : "crimson",
+    list :  [20,5,10,56,26]
+  };
+  var data2 = {
+    name : "Data2",
+    clr : "orange",
+    list :  [45,55,60,20,30]
+  };
+  var data = [data1,data2];
+  mkchart(canv,items,data,"Waste",300,250,200,{back:"yellow",line:"black",text:"brown"});
+
 }
 
 // Aloha+Food charts
 function go2food(){
   selectButton("food");
   canv.selectAll("*").remove();
-  // chart 1
-  var data = [
-    {label:"name1",val:50},
-    {label:"name2",val:30},
-    {label:"name3",val:20},
-    {label:"name4",val:10},
-    {label:"name5",val:56},
-    {label:"name6",val:26}];
-  mkchart(canv,data,"Food1",300,230,200,{back:"cyan",line:"green",poly:"lime",text:"green"});
 
-  // chart 2
-  var data2 = [
-    {label:"item1",val:25},
-    {label:"item2",val:55},
-    {label:"item3",val:30}
+  var items = [
+    "item1","item2","item3","item4","item5","item6","item7"
   ];
-  mkchart(canv,data2,"Food2",700,200,100,{back:"pink",line:"black",poly:"red",text:"black"});
+  var data1 = {
+    name : "Data1",
+    clr : "purple",
+    list :  [30,20,15,5,33,26,10]
+  };
+  var data2 = {
+    name : "Data2",
+    clr : "red",
+    list :  [45,20,30,50,10,55,60]
+  };
+  var data = [data1,data2];
+  mkchart(canv,items,data,"Food",300,250,200,{back:"pink",line:"magenta",text:"brown"});
 }
 
 // Aloha+Nature charts
 function go2nature(){
   selectButton("nature");
   canv.selectAll("*").remove();
-  // chart 1
-  var data = [
-    {label:"name1",val:50},
-    {label:"name2",val:30},
-    {label:"name3",val:20},
-    {label:"name4",val:10},
-    {label:"name5",val:56},
-    {label:"name6",val:26}];
-  mkchart(canv,data,"Nature1",300,230,200,{back:"cyan",line:"green",poly:"lime",text:"green"});
 
-  // chart 2
-  var data2 = [
-    {label:"item1",val:25},
-    {label:"item2",val:55},
-    {label:"item3",val:30},
-    {label:"item4",val:30}
+  var items = [
+    "item1","item2","item3","item4","item5","item6"
   ];
-  mkchart(canv,data2,"Nature2",700,200,100,{back:"pink",line:"black",poly:"red",text:"black"});
+  var data1 = {
+    name : "Data1",
+    clr : "blue",
+    list :  [50,30,20,10,56,26]
+  };
+  var data2 = {
+    name : "Data2",
+    clr : "green",
+    list :  [45,50,43,55,20,30]
+  };
+  var data = [data1,data2];
+  mkchart(canv,items,data,"Nature",300,250,200,{back:"cyan",line:"green",text:"green"});
 }
 
 // show the default charts
