--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -33,22 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Over View<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/analytics.html">Analytics</a>
+            <a class="nav-link" href="/clean-energy-transformation">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/dataUpload-energy.html">Upload Energy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dataUpload-waste.html">Upload Waste</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dataUpload-food.html">Upload Food</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dataUpload-nature.html">Upload Nature</a>
+            <a class="nav-link" href="/dataUpload">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
