--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -54,16 +54,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a id="btn_energy" class="nav-link active" href="javascript:go2energy()">Aloha+Energy <span id="spn_energy" class="sr-only">(current)</span></a>
+              <a id="btn_energy" class="nav-link active" href="javascript:go2energy()">Energy <span id="spn_energy" class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a id="btn_waste" class="nav-link" href="javascript:go2waste()">Aloha+Waste <span id="spn_waste" class="sr-only"></span></a>
+              <a id="btn_waste" class="nav-link" href="javascript:go2waste()">Waste <span id="spn_waste" class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a id="btn_food" class="nav-link" href="javascript:go2food()">Aloha+Food <span id="spn_food" class="sr-only"></span></a>
+              <a id="btn_food" class="nav-link" href="javascript:go2food()">Food <span id="spn_food" class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a id="btn_nature" class="nav-link" href="javascript:go2nature()">Aloha+Nature <span id="spn_nature" class="sr-only"></span></a>
+              <a id="btn_nature" class="nav-link" href="javascript:go2nature()">Nature <span id="spn_nature" class="sr-only"></span></a>
             </li>
           </ul>
         </nav>
