--- a/HACC-AP/clean-energy-transformation.html
+++ b/HACC-AP/clean-energy-transformation.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">Analytics<span class="sr-only">(current)</span></a>
