--- a/HACC-AP/dataUpload-waste.html
+++ b/HACC-AP/dataUpload-waste.html
@@ -25,7 +25,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Data Upload</a>
+      <a class="navbar-brand" href="#">ALOHA PLUS</a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,16 +54,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/dataUpload-energy">Aloha+Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/dataUpload-energy">Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-waste">Aloha+Waste</a>
+              <a class="nav-link" href="/dataUpload-waste">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-food">Aloha+Food</a>
+              <a class="nav-link" href="/dataUpload-food">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-nature">Aloha+Nature</a>
+              <a class="nav-link" href="/dataUpload-nature">Nature</a>
             </li>
           </ul>
         </nav>
