--- a/HACC-AP/dataUpload-waste.html
+++ b/HACC-AP/dataUpload-waste.html
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/clean-energy-transformation.html">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/dataUpload">Upload</a>
+            <a class="nav-link" href="/dataUpload">Upload <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -79,22 +79,25 @@
                 </div>
               </div>
               <div class="form-group row">
-              <label for="example-search-input" class="col-2 col-form-label">If so, what materials and how much? (ex. plastic bottles: 20 or by the amount of money earned)</label>
+              <label for="example-text-input" class="col-2 col-form-label">If so, what materials and how much? (ex. plastic bottles: 20 or by the amount of money earned)</label>
                 <div class="col-10">
-                  <input class="form-control" type="search" value="" id="example-search-input">
+                  <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
               <div class="form-group row">
-              <label for="example-search-input" class="col-2 col-form-label">Have you reused any sort of items (containers, boxes, etc.)?</label>
+              <label for="example-text-input" class="col-2 col-form-label">Have you reused any sort of items (containers, boxes, etc.)?</label>
                 <div class="col-10">
-                  <input class="form-control" type="search" value="" id="example-search-input">
+                  <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
               <div class="form-group row">
-              <label for="example-search-input" class="col-2 col-form-label">Have you reduce the usage of anything? (ex. instead of buying boxes of plastic bottles, boil water)</label>
+              <label for="example-text-input" class="col-2 col-form-label">Have you reduce the usage of anything? (ex. instead of buying boxes of plastic bottles, boil water)</label>
                 <div class="col-10">
-                  <input class="form-control" type="search" value="" id="example-search-input">
+                  <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
+              </div>
+              <div class="form-group row">
+                <button type="submit" class="btn btn-primary">Submit</button>
               </div>
 
 
