--- a/HACC-AP/dataUpload.html
+++ b/HACC-AP/dataUpload.html
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/clean-energy-transformation.html">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/dataUpload">Upload</a>
+            <a class="nav-link" href="/dataUpload">Upload <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -75,8 +75,11 @@
               <div class="form-group row">
               <label for="example-search-input" class="col-2 col-form-label">How much electricty did you use?</label>
                 <div class="col-10">
-                  <input class="form-control" type="search" value="" id="example-search-input">
+                  <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
+              </div>
+              <div class="form-group row">
+                <button type="submit" class="btn btn-primary">Submit</button>
               </div>
 
         </main>
