--- a/HACC-AP/dataUpload-food.html
+++ b/HACC-AP/dataUpload-food.html
@@ -54,13 +54,13 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/dataUpload-energy">Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/dataUpload-energy">Energy </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/dataUpload-waste">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-food">Food</a>
+              <a class="nav-link" href="/dataUpload-food">Food <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/dataUpload-nature">Nature</a>
