--- a/HACC-AP/dataUpload-nature.html
+++ b/HACC-AP/dataUpload-nature.html
@@ -54,7 +54,7 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/dataUpload-energy">Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/dataUpload-energy">Energy</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/dataUpload-waste">Waste</a>
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/dataUpload-food">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-nature">Nature</a>
+              <a class="nav-link" href="/dataUpload-nature">Nature <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </nav>
