--- a/HACC-AP/dataUpload-food.html
+++ b/HACC-AP/dataUpload-food.html
@@ -77,8 +77,26 @@
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
+              <fieldset class="form-group row">
+                <legend class="col-form-legend col-sm-2"> Have you wasted or thrown away any foods due to expiration?
+                </legend>
+                <div class="col-sm-10">
+                  <div class="form-check">
+                     <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                      Yes
+                    </label>
+                   </div>
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                      No
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
               <div class="form-group row">
-              <label for="example-text-input" class="col-2 col-form-label">Have you wasted or thrown away anything?</label>
+              <label for="example-text-input" class="col-2 col-form-label">If so, list down these foods and the quantity.</label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
