--- a/HACC-AP/dataUpload-nature.html
+++ b/HACC-AP/dataUpload-nature.html
@@ -71,14 +71,50 @@
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
 
           <h1>Natural Resource Management</h1>
+              <fieldset class="form-group row">
+                <legend class="col-form-legend col-sm-2"> Have you planted any trees?
+                </legend>
+                <div class="col-sm-10">
+                  <div class="form-check">
+                     <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                      Yes
+                    </label>
+                   </div>
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                      No
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
               <div class="form-group row">
-                <label for="example-text-input" class="col-2 col-form-label"> Have you planted any trees? </label>
+                <label for="example-text-input" class="col-2 col-form-label"> If so, how many trees? </label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
+              <fieldset class="form-group row">
+                <legend class="col-form-legend col-sm-2"> Have you caught any fishes?
+                </legend>
+                <div class="col-sm-10">
+                  <div class="form-check">
+                     <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1" checked>
+                      Yes
+                    </label>
+                   </div>
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios2" value="option2">
+                      No
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
               <div class="form-group row">
-              <label for="example-text-input" class="col-2 col-form-label">Have you caught any fishes?</label>
+              <label for="example-text-input" class="col-2 col-form-label">If so, how many fishes?</label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
