--- a/HACC-AP/dataUpload-waste.html
+++ b/HACC-AP/dataUpload-waste.html
@@ -71,36 +71,78 @@
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
 
           <h1>Solid Waste Reduction</h1>
-
-              <div class="form-group row">
-                <label for="example-text-input" class="col-2 col-form-label"> Have you recycled any sort of materials? </label>
-                <div class="col-10">
-                  <input class="form-control" type="text" value="" id="example-text-input">
+              <fieldset class="form-group row">
+                <legend class="col-form-legend col-sm-2"> Have you recycled any sort of materials? 
+                </legend>
+                <div class="col-sm-10">
+                  <div class="form-check">
+                     <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                      Yes
+                    </label>
+                   </div>
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                      No
+                    </label>
+                  </div>
                 </div>
-              </div>
+              </fieldset>
               <div class="form-group row">
               <label for="example-text-input" class="col-2 col-form-label">If so, what materials and how much? (ex. plastic bottles: 20 or by the amount of money earned)</label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
+              <fieldset class="form-group row">
+                <legend class="col-form-legend col-sm-2"> Have you reused any sort of items (containers, boxes, etc.)? 
+                </legend>
+                <div class="col-sm-10">
+                  <div class="form-check">
+                     <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios1" value="option1" checked>
+                      Yes
+                    </label>
+                   </div>
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios2" id="gridRadios2" value="option2">
+                      No
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
               <div class="form-group row">
-              <label for="example-text-input" class="col-2 col-form-label">Have you reused any sort of items (containers, boxes, etc.)?</label>
+              <label for="example-text-input" class="col-2 col-form-label">If so, what materials and how much?</label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
+              <fieldset class="form-group row">
+                <legend class="col-form-legend col-sm-2"> Have you reduce the usage of anything? (ex. instead of buying boxes of plastic bottles, boil water)
+                </legend>
+                <div class="col-sm-10">
+                  <div class="form-check">
+                     <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios3" id="gridRadios1" value="option1" checked>
+                      Yes
+                    </label>
+                   </div>
+                  <div class="form-check">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="gridRadios3" id="gridRadios2" value="option2">
+                      No
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
               <div class="form-group row">
-              <label for="example-text-input" class="col-2 col-form-label">Have you reduce the usage of anything? (ex. instead of buying boxes of plastic bottles, boil water)</label>
+              <label for="example-text-input" class="col-2 col-form-label">If so, what materials and how much?</label>
                 <div class="col-10">
                   <input class="form-control" type="text" value="" id="example-text-input">
                 </div>
               </div>
-              <div class="form-group row">
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </div>
-
-
         </main>
 
         
