--- a/HACC-AP/clean-food-energy.html
+++ b/HACC-AP/clean-food-energy.html
@@ -64,7 +64,7 @@
               <a class="nav-link active" href="/clean-food-energy">Food<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-nature-energy">Nature</a>
+              <a class="nav-link" href="/resource-management">Nature</a>
             </li>
           </ul>
         </nav>
