--- a/HACC-AP/clean-nature-energy.html
+++ b/HACC-AP/clean-nature-energy.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/clean-food-energy">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-nature-energy">Nature <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/resource-management">Nature <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </nav>
