--- a/HACC-AP/clean-waste-energy.html
+++ b/HACC-AP/clean-waste-energy.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/clean-food-energy">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-nature-energy">Nature</a>
+              <a class="nav-link" href="/resource-management">Nature</a>
             </li>
           </ul>
         </nav>
