Move clean-waste-energy page to waste-reduction

--- a/HACC-AP/clean-food-energy.html
+++ b/HACC-AP/clean-food-energy.html
@@ -58,7 +58,7 @@
               <a class="nav-link" href="/clean-energy-transformation">Energy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-waste-energy">Waste</a>
+              <a class="nav-link" href="/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/clean-food-energy">Food<span class="sr-only">(current)</span></a>
