--- a/HACC-AP/clean-waste-energy.html
+++ b/HACC-AP/clean-waste-energy.html
@@ -57,7 +57,7 @@
               <a class="nav-link" href="/clean-energy-transformation">Energy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-waste-energy">Waste<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/waste-reduction">Waste<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/clean-food-energy">Food</a>
