--- a/HACC-AP/resource-management.html
+++ b/HACC-AP/resource-management.html
@@ -57,7 +57,7 @@
               <a class="nav-link" href="/clean-energy-transformation">Energy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/clean-waste-energy">Waste</a>
+              <a class="nav-link" href="/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/clean-food-energy">Food</a>
