Removed position: fixed on header and sidebar

--- a/HACC-AP/menu/navbar.html
+++ b/HACC-AP/menu/navbar.html
@@ -1,5 +1,5 @@
     <!-- navigation bar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a href="/"><img src="https://i.ytimg.com/vi/6MyjFHd04R8/maxresdefault.jpg" height="30"></a>
       <a class="navbar-brand" href="/">Aloha+ Data Visualization</a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
