Changed "Over View" to "Overview"

--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -69,7 +69,7 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" id="main">
-          <h1 style="color:black">Over View</h1>
+          <h1 style="color:black">Overview</h1>
           <!-- charts will go here -->
           <svg id="canvas" width="1000" height="1000">
           </svg>
