--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -14,10 +14,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-  <link href="dashboard.css" rel="stylesheet">
+  <link href="/resource/css/dashboard.css" rel="stylesheet">
 
   <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
-  <script src="liquidFillGauge.js" language="JavaScript"></script>
+  <script src="/resource/js/liquidFillGauge.js" language="JavaScript"></script>
   <style>
   .liquidFillGaugeText { font-family: Helvetica; font-weight: bold; }
   </style>
