Removed deprecated script language attributes

--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -16,8 +16,8 @@
 
   <link href="/resource/css/dashboard.css" rel="stylesheet">
 
-  <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
-  <script src="/resource/js/liquidFillGauge.js" language="JavaScript"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="/resource/js/liquidFillGauge.js"></script>
   <style>
   .liquidFillGaugeText { font-family: Helvetica; font-weight: bold; }
   </style>
