Removed script type attribute as per HTML5 spec recommendation

--- a/HACC-AP/graphMockup.html
+++ b/HACC-AP/graphMockup.html
@@ -10,7 +10,7 @@
 			}
 		</style>
 		<script src="https://code.highcharts.com/stock/highstock.js"></script>
-		<script type="text/javascript">
+		<script>
 			document.addEventListener("DOMContentLoaded", () => {
 				let chart = Highcharts.stockChart('container', {
 					credits: false,
