Updated links to moved pages

--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Analytics<span class="sr-only">(current)</span></a>
           </li>
 	 <li class="nav-item">
-            <a class="nav-link" href="/dataUpload">Upload</a>
+            <a class="nav-link" href="/data-upload/">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -54,16 +54,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/clean-energy-transformation">Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/analytics/clean-energy">Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/waste-reduction">Waste</a>
+              <a class="nav-link" href="/analytics/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/local-food">Food</a>
+              <a class="nav-link" href="/analytics/local-food">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/resource-management">Nature</a>
+              <a class="nav-link" href="/analytics/resource-management">Nature</a>
             </li>
           </ul>
         </nav>
