--- a/HACC-AP/data-upload/index.html
+++ b/HACC-AP/data-upload/index.html
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/clean-energy-transformation.html">Analytics</a>
+            <a class="nav-link" href="/analytics/clean-energy">Analytics</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/dataUpload">Upload <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/data-upload/">Upload <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -49,16 +49,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/dataUpload-energy">Energy <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/data-upload/clean-energy">Energy <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-waste">Waste</a>
+              <a class="nav-link" href="/data-upload/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-food">Food</a>
+              <a class="nav-link" href="/data-upload/local-food">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dataUpload-nature">Nature</a>
+              <a class="nav-link" href="/data-upload/resource-management">Nature</a>
             </li>
           </ul>
         </nav>
