--- a/HACC-AP/analytics/local-food.html
+++ b/HACC-AP/analytics/local-food.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Analytics  <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/dataUpload">Upload</a>
+            <a class="nav-link" href="/data-upload/">Upload</a>
           </li>
 	  
         </ul>
@@ -55,16 +55,16 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link" href="/clean-energy-transformation">Energy</a>
+              <a class="nav-link" href="/analytics/clean-energy">Energy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/waste-reduction">Waste</a>
+              <a class="nav-link" href="/analytics/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/local-food">Food<span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/analytics/local-food">Food<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/resource-management">Nature</a>
+              <a class="nav-link" href="/analytics/resource-management">Nature</a>
             </li>
           </ul>
         </nav>
