--- a/HACC-AP/index.html
+++ b/HACC-AP/index.html
@@ -36,10 +36,10 @@
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/clean-energy-transformation">Analytics</a>
+            <a class="nav-link" href="/analytics/clean-energy">Analytics</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/dataUpload">Upload</a>
+            <a class="nav-link" href="/data-upload/">Upload</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
