Fix active links

--- a/HACC-AP/data-upload/local-food.html
+++ b/HACC-AP/data-upload/local-food.html
@@ -32,13 +32,13 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/analytics/clean-energy">Analytics</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/data-upload/clean-energy">Upload <span class="sr-only">(current)</span></a>
           </li>
         </ul>
@@ -54,13 +54,13 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/data-upload/clean-energy">Energy </a>
+              <a class="nav-link" href="/data-upload/clean-energy">Energy </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/data-upload/waste-reduction">Waste</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/data-upload/local-food">Food <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/data-upload/local-food">Food <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/data-upload/resource-management">Nature</a>
