--- a/HACC-AP/data-upload/resource-management.html
+++ b/HACC-AP/data-upload/resource-management.html
@@ -38,7 +38,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/clean-energy-transformation.html">Analytics</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/data-upload/clean-energy">Upload <span class="sr-only">(current)</span></a>
           </li>
         </ul>
@@ -54,7 +54,7 @@
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/data-upload/clean-energy">Energy</a>
+              <a class="nav-link" href="/data-upload/clean-energy">Energy</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/data-upload/waste-reduction">Waste</a>
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/data-upload/local-food">Food</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/data-upload/resource-management">Nature <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/data-upload/resource-management">Nature <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </nav>
