Fix radio buttons

--- a/HACC-AP/data-upload/resource-management.html
+++ b/HACC-AP/data-upload/resource-management.html
@@ -77,7 +77,7 @@
                 <div class="col-sm-10">
                   <div class="form-check">
                      <label class="form-check-label">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1">
                       Yes
                     </label>
                    </div>
