--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -73,7 +73,7 @@
 		<h1>CLEAN ENERGY TRANSFORMATION</h1>
 		<p>Hawaii is determined to achieve its goal of 40 percent renewable energy in the electricity sector and a reduction of electricity consumption by 4,300 gigawatt-hours by 2030 as a mid-term goal on the way to100 percent renewable energy generation by 2045. Currently, only renewable energy for electricity is being tracked for this goal until Hawaii Energy Efficiency Portfolio Standards are released in 2019. Pursuing energy independence and transitioning off fossil fuels achieves a dual purpose: stimulating smart growth that benefits future generations in Hawaii and delivering cost-effective energy that is environmentally friendly.</p>
 			<svg id="fillgauge1" width="97%" height="250" onclick="gauge1.update(NewValue());"></svg>
-			<svg id="fillgauge2" width="19%" height="200" onclick="gauge2.update(NewValue());"></svg>
+			<!-- <svg id="fillgauge2" width="19%" height="200" onclick="gauge2.update(NewValue());"></svg> -->
 			<!-- <svg id="fillgauge3" width="19%" height="200" onclick="gauge3.update(NewValue());"></svg> -->
 			<!-- <svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg> -->
 			<!-- <svg id="fillgauge5" width="19%" height="200" onclick="gauge5.update(NewValue());"></svg> -->
@@ -81,34 +81,34 @@
 			<script language="JavaScript">
 				var gauge1 = loadLiquidFillGauge("fillgauge1", 55);
 				var config1 = liquidFillGaugeDefaultSettings();
-				<!-- config1.circleColor = "#D4AB6A"; -->
-				<!-- config1.textColor = "#553300"; -->
-				<!-- config1.waveTextColor = "#805615"; -->
-				<!-- config1.waveColor = "#AA7D39"; -->
-				<!-- config1.circleThickness = 0.1; -->
-				<!-- config1.circleFillGap = 0.2; -->
-				<!-- config1.textVertPosition = 0.8; -->
-				<!-- config1.waveAnimateTime = 2000; -->
-				<!-- config1.waveHeight = 0.3; -->
-				<!-- config1.waveCount = 1; -->
-				config1.circleColor = "#FF7777";
-				config1.textColor = "#FF4444";
-				config1.waveTextColor = "#FFAAAA";
-				config1.waveColor = "#FFDDDD";
-				config1.circleThickness = 0.2;
-				config1.textVertPosition = 0.2;
-				config1.waveAnimateTime = 1000;
-				var gauge2= loadLiquidFillGauge("fillgauge2", 28, config1);
-				var config2 = liquidFillGaugeDefaultSettings();
-				config2.circleColor = "#D4AB6A";
-				config2.textColor = "#553300";
-				config2.waveTextColor = "#805615";
-				config2.waveColor = "#AA7D39";
-				config2.circleThickness = 0.1;
-				config2.circleFillGap = 0.2;
-				config2.textVertPosition = 0.8;
-				config2.waveAnimateTime = 2000;
-				config2.waveHeight = 0.3;
+				config1.circleColor = "#D4AB6A";
+				config1.textColor = "#553300";
+				config1.waveTextColor = "#805615";
+				config1.waveColor = "#AA7D39";
+				config1.circleThickness = 0.1;
+				config1.circleFillGap = 0.2;
+				config1.textVertPosition = 0.8;
+				config1.waveAnimateTime = 2000;
+				config1.waveHeight = 0.3;
+				config1.waveCount = 1;
+				<!-- config1.circleColor = "#FF7777"; -->
+				<!-- config1.textColor = "#FF4444"; -->
+				<!-- config1.waveTextColor = "#FFAAAA"; -->
+				<!-- config1.waveColor = "#FFDDDD"; -->
+				<!-- config1.circleThickness = 0.2; -->
+				<!-- config1.textVertPosition = 0.2; -->
+				<!-- config1.waveAnimateTime = 1000; -->
+				<!-- var gauge2= loadLiquidFillGauge("fillgauge2", 28, config1); -->
+				<!-- var config2 = liquidFillGaugeDefaultSettings(); -->
+				<!-- config2.circleColor = "#D4AB6A"; -->
+				<!-- config2.textColor = "#553300"; -->
+				<!-- config2.waveTextColor = "#805615"; -->
+				<!-- config2.waveColor = "#AA7D39"; -->
+				<!-- config2.circleThickness = 0.1; -->
+				<!-- config2.circleFillGap = 0.2; -->
+				<!-- config2.textVertPosition = 0.8; -->
+				<!-- config2.waveAnimateTime = 2000; -->
+				<!-- config2.waveHeight = 0.3; -->
 				<!-- config2.waveCount = 1; -->
 				<!-- var gauge3 = loadLiquidFillGauge("fillgauge3", 60.1, config2); -->
 				<!-- var config3 = liquidFillGaugeDefaultSettings(); -->
