--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -93,7 +93,7 @@
 				config1.waveCount = 1;
 				d3.select("svg")
 				  .attr("id", "fillgauge1")
-				  .attr("visibility", "hidden")
+				  //.attr("visibility", "hidden")
 				<!-- config1.circleColor = "#FF7777"; -->
 				<!-- config1.textColor = "#FF4444"; -->
 				<!-- config1.waveTextColor = "#FFAAAA"; -->
