--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -91,9 +91,9 @@
 				config1.waveAnimateTime = 2000;
 				config1.waveHeight = 0.3;
 				config1.waveCount = 1;
-				d3.select("svg")
-				  .attr("id", "fillgauge1")
-				  //.attr("visibility", "hidden")
+				<!-- d3.select("svg") -->
+				  <!-- .attr("id", "fillgauge1") -->
+				  <!-- //.attr("visibility", "hidden") -->
 				<!-- config1.circleColor = "#FF7777"; -->
 				<!-- config1.textColor = "#FF4444"; -->
 				<!-- config1.waveTextColor = "#FFAAAA"; -->
