Fixed incorrect container name for graph

--- a/HACC-AP/analytics/waste-reduction.html
+++ b/HACC-AP/analytics/waste-reduction.html
@@ -27,7 +27,7 @@
 				var jqXHR = $.get("/api/get/" + graphID, function (data) {
 					var graphData = JSON.parse(data);
 					
-					var chart = Highcharts.stockChart('container', {
+					var chart = Highcharts.stockChart("graph-container", {
 						credits: false,
 						rangeSelector: {
 						selected: 1
