--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -75,8 +75,7 @@
 		<p>Hawaii is determined to achieve its goal of 40 percent renewable energy in the electricity sector and a reduction of electricity consumption by 4,300 gigawatt-hours by 2030 as a mid-term goal on the way to100 percent renewable energy generation by 2045. Currently, only renewable energy for electricity is being tracked for this goal until Hawaii Energy Efficiency Portfolio Standards are released in 2019. Pursuing energy independence and transitioning off fossil fuels achieves a dual purpose: stimulating smart growth that benefits future generations in Hawaii and delivering cost-effective energy that is environmentally friendly.</p>
 			<h3>Gas Consumption</h3>
 			<svg id="fillgauge1" width="19%" height="200" onclick="gauge1.update(NewValue());"></svg>
-			<br>
-			<h3>Electric Usage</h3>
+			<h3 style="padding-top:30px;>Electric Usage</h3>
 			<svg id="fillgauge2" width="19%" height="200" onclick="gauge2.update(NewValue());"></svg> 
 			<!-- <svg id="fillgauge3" width="19%" height="200" onclick="gauge3.update(NewValue());"></svg> -->
 			<!-- <svg id="fillgauge4" width="19%" height="200" onclick="gauge4.update(NewValue());"></svg> -->
